--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -35,6 +35,10 @@ body {
         box-sizing: border-box;
         -webkit-tap-highlight-color: transparent;
     }
+
+    &.hidden {
+        overflow: hidden;
+    }
 }
 
 p {
@@ -237,7 +241,6 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-/* Firefox */
 input[type=number] {
     -moz-appearance: textfield;
 }
@@ -262,6 +265,9 @@ input[type=number] {
 // font-family: 'Montserrat', sans-serif;
 // font-family: 'Poppins', sans-serif;
 // font-family: 'Poetsenone';
+
+
+// SELECT
 
 .generalselect {
     .select2-container {
@@ -298,6 +304,110 @@ input[type=number] {
         transform: rotate(-180deg);
     }
 }
+
+// Pagination
+
+.pagination {
+    margin-top: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0 25px 0 0;
+
+        li {
+            display: inline-block;
+            vertical-align: middle;
+            margin: 0 4px;
+
+            a {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                width: 35px;
+                height: 35px;
+                background: transparent;
+                color: #3B454C;
+                font-size: 18px;
+                border-radius: 50%;
+                transition: 0.3s;
+                border: 1px solid transparent;
+
+                &:hover {
+                    border: 1px solid $base-green;
+                }
+            }
+
+            &.active {
+                a {
+                    background: $base-green;
+                    color: #fff;
+                }
+            }
+        }
+    }
+
+    .gotopage {
+        width: 83px;
+        height: 40px;
+        border-radius: 2px;
+        border: 1px solid #E6E8EC;
+        position: relative;
+
+        input {
+            width: 48px;
+            height: 100%;
+            border: none;
+            padding-left: 14px;
+            color: #3B454C;
+            font-size: 18px;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            right: 9px;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 20px;
+            width: 20px;
+            transition: 0.3s;
+
+            &:hover {
+                background: #e4f9f4;
+                border-radius: 50%;
+            }
+        }
+
+        span {
+            color: #3B454C;
+            font-size: 11px;
+            font-weight: 500;
+            line-height: 150%;
+            background: #fff;
+            position: absolute;
+            left: 4.5px;
+            top: -9px;
+            z-index: 2;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
 
 @media(max-width:1550.8px) {
 
