--- a/#source/scss/category.scss
+++ b/#source/scss/category.scss
@@ -98,6 +98,7 @@
     padding: 30px 0;
     border-bottom: 1px solid #D9DBDF;
     display: flex;
+    flex-wrap: wrap;
 
     a {
         width: 100%;
@@ -624,10 +625,11 @@
 
     .categorysect__head {
         flex-wrap: wrap;
-        padding-right: 60px;
+        padding-right: 0;
 
         .categorysect__head-left {
             margin-bottom: 20px;
+            padding-right: 60px;
         }
 
         .categorysect__head-left {
@@ -683,7 +685,7 @@
     }
 
     .categorysect__filter {
-        
+
         &.show {
             position: fixed;
             left: 0;
@@ -695,7 +697,7 @@
             height: 100vh;
             background: rgba(0, 0, 0, 0.4);
             overflow: auto;
-    
+
             .filter-overlay {
                 max-width: 400px;
                 flex: 0 0 400px;
@@ -707,19 +709,90 @@
         }
     }
 
+}
+
+@media(max-width:767.8px) {
+
+    .smallpageinf .smallpageinf__wrap {
+        height: auto;
+        min-height: 160px;
+
+        img {
+            object-position: 0 0;
+        }
+
+        h1 {
+            max-width: 100%;
+        }
+    }
+
+
+}
+
+@media(max-width:575.8px) {
+
+    .smallpageinf .smallpageinf__wrap h1 {
+        font-size: 24px;
+    }
+
+    .categorysect__head ul li a {
+        font-size: 12px;
+        padding: 7px 5px;
+    }
+
+    .categorysect__head .categorysect__head-right {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+    .categorysect__head .categorysect__head-left {
+        margin-bottom: 10px;
+    }
+
+    .smallpageinf .smallpageinf__wrap {
+        min-height: 100px;
+    }
+
+    .categorysect__discounts {
+        justify-content: space-between;
+
+        a {
+            max-width: 50px;
+            flex: 0 0 50px;
+            margin-right: 20px;
+        }
+    }
+
+    .pagination .gotopage {
+        display: none;
+    }
+
+    .pagination {
+        margin-top: 40px;
+
+        ul {
+            margin-right: 0;
+        }
+    }
+
+
+    
+
+
+}
+
+@media(max-width:360.8px) {
+
+    .pagination ul li {
+        margin: 0 1px;
+    }
 
 
 }
 
 
 
-
-
-
-
-
-
-
+// food-e-commerce
 
 
 
