--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -22,6 +22,11 @@ $base-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
 
 html {
     scroll-behavior: smooth;
+
+    &.hidden {
+        overflow-x: hidden;
+        position: relative;
+    }
 }
 
 body {
@@ -37,7 +42,8 @@ body {
     }
 
     &.hidden {
-        overflow: hidden;
+        overflow-x: hidden;
+        position: relative;
     }
 }
 
