--- a/#source/scss/product.scss
+++ b/#source/scss/product.scss
@@ -303,3 +303,577 @@
 }
 
 // ---
+
+.prinfobox {
+    background: $white;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 65px;
+}
+
+.greytitle {
+    color: $bace-color;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 135%;
+    padding: 23px;
+    text-align: center;
+    border-radius: 10px 10px 0px 0px;
+    background: #F0F0F0;
+    margin: 0;
+}
+
+.prinfobox__body {
+    padding: 30px 40px 90px 40px;
+    color: $bace-color;
+    font-size: 15px;
+    line-height: 150%;
+
+    .leftsect {
+        padding-right: 45px;
+    }
+
+    p {
+        margin-bottom: 10px;
+
+        &.title {
+            font-size: 17px;
+            font-weight: 600;
+            line-height: 135%;
+            margin-top: 30px;
+            margin-bottom: 20px;
+        }
+    }
+
+    .supplementfacts {
+        margin-bottom: 40px;
+
+        .title {
+            margin-top: 0;
+            margin-bottom: 20px;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 135%;
+        }
+
+        .descr {
+            p {
+                padding: 12px 5px;
+                margin: 0;
+                border-bottom: 1px solid #D9DBDF;
+
+                &:first-child {
+                    border-top: 1px solid #D9DBDF;
+                }
+
+                &:nth-child(2n) {
+                    background: #FAFAFA;
+                }
+            }
+        }
+    }
+
+    .supplementtable {
+        .supplementtable__header {
+            display: flex;
+            justify-content: flex-end;
+            padding-bottom: 26px;
+
+            p {
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 135%;
+                margin: 0;
+            }
+
+            .amountperserving {
+                width: 100%;
+                max-width: 125px;
+                flex: 0 0 125px;
+            }
+
+            .dailyval {
+                width: 100%;
+                max-width: 75px;
+                flex: 0 0 75px;
+            }
+        }
+
+        .supplementtable__row {
+            border-top: 1px solid #D9DBDF;
+            display: flex;
+            flex-wrap: wrap;
+            padding: 12px 5px;
+
+            &:last-child {
+                border-bottom: 1px solid #D9DBDF;
+            }
+
+            &:nth-child(2n) {
+                background: #FAFAFA;
+            }
+
+            p {
+                margin: 0;
+                line-height: 135%;
+            }
+
+            .supplementtable__title {
+                width: 100%;
+                max-width: calc(100% - 200px);
+                flex: 0 0 calc(100% - 200px);
+            }
+
+            .amountperserving {
+                width: 100%;
+                max-width: 125px;
+                flex: 0 0 125px;
+            }
+
+            .dailyval {
+                width: 100%;
+                max-width: 75px;
+                flex: 0 0 75px;
+            }
+        }
+    }
+
+    .supplementtable__botttext {
+        padding: 13px 5px;
+        min-height: 100px;
+        border-bottom: 1px solid #D9DBDF;
+        border-top: 1px solid #D9DBDF;
+        background: #FAFAFA;
+    }
+
+
+
+
+
+
+
+
+
+
+
+}
+
+.productsection-sliderwrapper.prod {
+
+    .swiper {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
+    .productbox {
+        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.06);
+    }
+}
+
+.accordeonsect {
+    .accordeonsect__row {
+        border-bottom: 1px solid #D9DBDF;
+    }
+
+    .accordeonsect_header {
+        position: relative;
+        padding: 20px 50px 20px 0;
+        cursor: pointer;
+
+        p {
+            margin: 0;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 135%;
+        }
+
+        .accordeonsect_arrow {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            right: 0;
+            top: 19px;
+            transition: 0.3s;
+
+            svg {
+                path {
+                    transition: 0.3s;
+                }
+            }
+        }
+
+        &.open {
+            .accordeonsect_arrow {
+                transform: rotate(180deg);
+
+                svg {
+                    path {
+                        stroke: $base-green;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .accordeonsect__body {
+        display: none;
+        padding-bottom: 30px;
+
+        p {
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+
+
+}
+
+// ---
+
+.custreviews {
+    width: 100%;
+    max-width: 1022px;
+    margin: 0 auto;
+    padding: 40px 0 0 0;
+
+
+    .custreviews__wrap {
+        display: flex;
+        flex-wrap: wrap;
+        border-bottom: 1px solid #D9DBDF;
+        padding-bottom: 90px;
+    }
+
+    .custreviews__left {
+        width: 100%;
+        max-width: 53%;
+        flex: 0 0 53%;
+        display: flex;
+        flex-wrap: wrap;
+
+        .writereview {
+            width: 100%;
+            max-width: 247px;
+            flex: 0 0 247px;
+            padding-right: 30px;
+        }
+
+        .productrating {
+            width: 100%;
+            max-width: calc(100% - 247px);
+            flex: 0 0 calc(100% - 247px);
+        }
+    }
+
+    .custreviews__right {
+        width: 100%;
+        max-width: 47%;
+        flex: 0 0 47%;
+        text-align: right;
+
+        .imgswrap {
+            display: inline-flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            max-width: 430px;
+            width: 100%;
+
+            .imgwrap {
+                height: 70px;
+                width: 100px;
+                position: relative;
+                overflow: hidden;
+                border-radius: 5px;
+                margin-bottom: 10px;
+
+                img {
+                    object-fit: cover;
+                    object-position: 50% 50%;
+
+                }
+
+            }
+
+        }
+    }
+}
+
+.evaluation {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 5px;
+
+    span {
+        width: 100%;
+        max-width: 70px;
+        flex: 0 0 70px;
+        font-size: 44px;
+        font-weight: 600;
+        line-height: 135%;
+    }
+
+    .stars {
+        width: 100%;
+        max-width: calc(100% - 70px);
+        flex: 0 0 calc(100% - 70px);
+        padding-left: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        img {
+            width: 21px;
+        }
+    }
+
+}
+
+.writereview {
+    border-right: 1px solid #D9DBDF;
+
+    p {
+        font-size: 17px;
+        margin-bottom: 25px;
+    }
+
+    .greenbtn {
+        min-height: 45px;
+        font-size: 14px;
+    }
+}
+
+.productrating {
+    padding-left: 30px;
+}
+
+.productrating__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    &>span {
+        font-size: 14px;
+        line-height: 110%;
+    }
+
+    .ratingline {
+        width: 160px;
+        height: 16px;
+        border-radius: 2px;
+        background: #E3E4E5;
+        position: relative;
+
+        span {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 16px;
+            background: $base-green;
+            border-radius: 2px;
+        }
+    }
+}
+
+.prodtestimonials {
+    padding: 35px 0 0 0;
+}
+
+.prodtestimonial {
+    margin-bottom: 50px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    .prodtestimonial__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 15px;
+
+        .date {
+            color: #808080;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 120%;
+        }
+
+        .prodtestimonial__userbox {
+            display: flex;
+            align-items: center;
+
+            .imgwrap {
+                width: 100%;
+                max-width: 45px;
+                flex: 0 0 45px;
+                position: relative;
+                overflow: hidden;
+                border-radius: 50%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    vertical-align: top;
+                    object-fit: cover;
+                }
+            }
+
+            .name {
+                padding-left: 13px;
+
+                p {
+                    margin-bottom: 5px;
+                    color: #333;
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 120%;
+                }
+
+                .stars {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    width: 90px;
+
+                }
+            }
+        }
+    }
+
+    .prodtestimonial__body {
+        padding-bottom: 17px;
+
+        p {
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    .prodtestimonial__footer {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        p {
+            color: #808080;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 120%;
+            margin: 0;
+        }
+
+        a {
+            color: #808080;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 120%;
+            margin-left: 16px;
+
+            img {
+                vertical-align: middle;
+                margin-right: 5px;
+                margin-top: -4px;
+            }
+        }
+    }
+
+}
+
+.product-description.review {
+    padding-bottom: 55px;
+}
+
+
+@media(max-width:1550.8px) {
+    .product-description.review .prinfobox {
+        margin-bottom: 0;
+    }
+}
+
+@media(max-width:1199.8px) {
+
+    .prodbig .imgwrap .slidelabel {
+        width: 60px;
+        height: 40px;
+        font-size: 16px;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .prodbig .imgwrap {
+        height: 500px;
+    }
+
+    .prodbig .imgwrap img {
+        max-width: 90%;
+        max-height: 400px;
+    }
+
+    .productinfo {
+        padding: 10px 0 0 0;
+    }
+
+    .productinfo .productinfo__name {
+        line-height: 140%;
+    }
+
+    .productinfo__deliveryinfo p {
+        margin-bottom: 10px;
+    }
+
+    .custreviews .custreviews__left .writereview {
+        max-width: 200px;
+        flex: 0 0 200px;
+        padding-right: 10px;
+    }
+
+    .custreviews .custreviews__left .productrating {
+        max-width: calc(100% - 200px);
+        flex: 0 0 calc(100% - 200px);
+    }
+
+    .evaluation span {
+        font-size: 36px;
+        max-width: 60px;
+        flex: 0 0 60px;
+    }
+
+    .evaluation .stars img {
+        width: 18px;
+    }
+
+    .writereview p {
+        font-size: 14px;
+        margin-bottom: 15px;
+    }
+
+    .productrating {
+        padding-left: 10px;
+    }
+
+    .productrating__row .ratingline {
+        width: 140px;
+    }
+
+    .custreviews .custreviews__right {
+        padding-left: 20px;
+    }
+
+    .custreviews .custreviews__right .imgswrap .imgwrap {
+        width: 90px;
+    }
+
+    .custreviews .custreviews__wrap {
+        padding-bottom: 50px;
+    }
+
+}
