--- a/#source/scss/cart-page.scss
+++ b/#source/scss/cart-page.scss
@@ -1,5 +1,6 @@
 .cartcontent {
     padding: 50px 0 170px 0;
+    position: relative;
 }
 
 .cart__product {
@@ -7,6 +8,9 @@
     overflow: hidden;
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
     background: #fff;
+    margin-bottom: 50px;
+    position: relative;
+    z-index: 2;
 }
 
 .cart__product-header {
@@ -58,6 +62,11 @@
     display: flex;
     flex-wrap: wrap;
     padding: 35px 0;
+    border-bottom: 1px solid #D9DBDF;
+
+    &:last-child {
+        border: none;
+    }
 }
 
 .cart__product-check {
@@ -164,9 +173,9 @@
             align-items: center;
             justify-content: center;
             width: 100%;
-            max-width: 16px;
-            flex: 0 0 16px;
-            height: 16px;
+            max-width: 17px;
+            flex: 0 0 17px;
+            height: 17px;
             border-radius: 50%;
             background: $base-green;
             cursor: pointer;
@@ -223,13 +232,84 @@
     }
 }
 
+.shippingest {
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    position: relative;
+    z-index: 2;
+}
 
+.shippingest__header {
+    min-height: 80px;
+    background: #F0F0F0;
+    padding: 5px 35px;
+    display: flex;
+    align-items: center;
 
+    p {
+        margin: 0;
+        color: $base-green;
+        font-size: 22px;
+        font-weight: 600;
+        line-height: 120%;
+    }
+}
 
+.shippingest__body {
+    padding: 25px 35px 40px 35px;
+    background: #fff;
+
+    .destination {
+        color: #5D656B;
+        margin-bottom: 10px;
+        font-weight: 500;
+        line-height: 160%;
+
+        span {
+            color: $bace-color;
+        }
+    }
+
+    .inputfield {
+        margin-bottom: 10px;
+
+        input:not([type='submit']) {
+            max-width: 390px;
+            flex: 0 0 390px;
+        }
+
+        .greenbtn {
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            max-width: 204px;
+            flex: 0 0 204px;
+            padding: 5px;
+            font-weight: 600;
+            line-height: 100%;
+            color: #fff;
+            font-size: 18px;
+            margin-left: 15px;
+        }
+    }
+
+    .totalweight {
+        margin: 0;
+        color: $bace-color;
+        font-size: 14px;
+        line-height: 160%;
+    }
+}
+
+// --
 .basketblock {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    position: sticky;
+    top: 20px;
+    z-index: 2;
 
     .basketblock__header {
         min-height: 80px;
@@ -256,9 +336,372 @@
 
     .basketblock__body {
         padding: 30px;
+        background: #fff;
+    }
+
+    .basketblock__price {
+        padding-bottom: 12px;
+        border-bottom: 1px solid #D9DBDF;
+    }
+
+    .basketblock__pricerow {
+        display: flex;
+        align-items: center;
+        margin-bottom: 12px;
+        line-height: 160%;
+
+        .title {
+            width: 100%;
+            max-width: calc(100% - 80px);
+            flex: 0 0 calc(100% - 80px);
+            color: $bace-color;
+            font-weight: 500;
+            margin: 0;
+
+            span {
+                font-weight: 400;
+            }
+        }
+
+        .price {
+            width: 100%;
+            max-width: 80px;
+            flex: 0 0 80px;
+            margin: 0;
+            color: $bace-color;
+            font-weight: 500;
+            text-decoration: line-through;
+            text-align: right;
+
+            &.price_green {
+                text-decoration: none;
+
+                span {
+                    display: inline-block;
+                    font-size: 15px;
+                    padding: 3px 5px;
+                    border-radius: 12px;
+                    background: rgba(19, 176, 134, 0.13);
+                }
+            }
+        }
+
+        &.shipping {
+
+            .title,
+            .price {
+                font-size: 14px;
+                color: #505D67;
+            }
+
+        }
+    }
+}
+
+.basketblock__totalbox {
+    padding: 25px 0 0 0;
+
+    .totalinfo {
+        display: flex;
+        align-items: center;
+        color: $bace-color;
+        margin-bottom: 34px;
+
+        .totalinfo__title {
+            width: 100%;
+            max-width: 40%;
+            flex: 0 0 40%;
+            margin: 0;
+            font-size: 19px;
+            font-weight: 600;
+        }
+
+        .totalinfo__price {
+            width: 100%;
+            max-width: 60%;
+            flex: 0 0 60%;
+            text-align: right;
+            margin: 0;
+            font-size: 20px;
+            font-weight: 500;
+        }
+    }
+
+    .greenbtn {
+        min-height: 55px;
+        font-size: 18px;
+        margin-bottom: 25px;
+
+        img {
+            margin-left: 5px;
+            margin-bottom: -1px;
+            transition: 0.3s;
+        }
+
+        &:hover {
+            img {
+                transform: translateX(10px);
+            }
+        }
+    }
+
+    .policy {
+        color: $bace-color;
+        font-size: 14px;
+        line-height: 150%;
+        text-align: center;
+        margin-bottom: 0;
+
+        a {
+            color: $base-green;
+            text-underline-offset: 3px;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.cartbgelem1 {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.cartbgelem2 {
+    position: absolute;
+    bottom: 140px;
+    left: 0;
+}
+
+.cart__product-header .mobtitle {
+    display: none;
+}
+
+@media(max-width:1199.8px) {
+
+    .basketblock .basketblock__body {
+        padding: 20px;
+    }
+
+    .cart__product-header,
+    .basketblock .basketblock__header,
+    .shippingest__header {
+        min-height: 60px;
+    }
+
+    .cart__product-pr .imgwrap {
+        max-width: 100px;
+        flex: 0 0 100px;
+    }
+
+    .cart__product-pr .descrwrap {
+        max-width: calc(100% - 100px);
+        flex: 0 0 calc(100% - 100px);
+    }
+
+    .shippingest__body .inputfield input:not([type=submit]) {
+        max-width: 300px;
+        flex: 0 0 300px;
+    }
+
+    .shippingest__body .inputfield .greenbtn {
+        max-width: 180px;
+        flex: 0 0 180px;
     }
 
 
 
 
+    .basketblock .basketblock__header p,
+    .shippingest__header p {
+        font-size: 20px;
+    }
+
+    .basketblock__totalbox .greenbtn,
+    .cart__product-header p {
+        font-size: 16px;
+    }
+}
+
+@media(max-width:991.8px) {
+
+    .shippingest {
+        margin-bottom: 50px;
+    }
+
+    .cartcontent {
+        padding-bottom: 100px;
+    }
+
+}
+
+@media(max-width:767.8px) {
+
+    .cart__product-header {
+        justify-content: space-between;
+
+        .hselall,
+        .hproduct,
+        .hqty,
+        .hprice {
+            max-width: initial;
+            flex: initial;
+            width: auto;
+        }
+    }
+
+    .cart__product-pr {
+        max-width: calc(100% - 34px);
+        flex: 0 0 calc(100% - 34px);
+    }
+
+    .cart__product-pr .imgwrap {
+        max-width: 115px;
+        flex: 0 0 115px;
+    }
+
+    .cart__product-pr .descrwrap {
+        max-width: calc(100% - 115px);
+        flex: 0 0 calc(100% - 115px);
+    }
+
+    .cart__product-count {
+        max-width: calc(50% - 25px);
+        flex: 0 0 calc(50% - 25px);
+        padding-top: 20px;
+    }
+
+    .cart__product-price {
+        max-width: 50%;
+        flex: 0 0 50%;
+        padding-top: 20px;
+    }
+
+    .cart__product-remove {
+        padding-top: 20px;
+    }
+
+    .shippingest__body .inputfield input:not([type=submit]) {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 20px;
+    }
+
+    .shippingest__body .inputfield .greenbtn {
+        margin: 0;
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+}
+
+@media(max-width:575.8px) {
+
+    .cart__product-header {
+        padding: 5px 15px;
+    }
+
+    .cart__product-body {
+        padding: 10px 15px;
+    }
+
+    .cart__product-check {
+        position: absolute;
+        top: 35px;
+        left: 10px;
+    }
+
+    .cart__product-remove {
+        position: absolute;
+        top: 35px;
+        right: 10px;
+        padding-top: 0;
+    }
+
+    .cart__product-pr {
+        max-width: 100%;
+        flex: 0 0 100%;
+
+        .imgwrap,
+        .descrwrap {
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+    }
+
+    .cart__product-pr .imgwrap {
+        height: 140px;
+    }
+
+    .cart__product-row {
+        position: relative;
+        padding: 25px 0;
+    }
+
+    .cart__product-pr .descrwrap {
+        margin-top: 15px;
+    }
+
+    .cart__product-pr .descrwrap .prweight {
+        margin: 0;
+    }
+
+    .cart__product-count {
+        max-width: 50%;
+        flex: 0 0 50%;
+
+        .number {
+            max-width: 100%;
+
+            input {
+                width: 100%;
+                max-width: calc(100% - 60px);
+                flex: 0 0 calc(100% - 60px);
+            }
+
+            span {
+                max-width: 21px;
+                flex: 0 0 21px;
+                height: 21px;
+            }
+        }
+    }
+
+    .cart__product-price {
+        text-align: right;
+    }
+
+    .basketblock__totalbox .totalinfo {
+        margin-bottom: 20px;
+    }
+
+    .cartcontent {
+        padding-bottom: 80px;
+    }
+
+
+    .shippingest__body,
+    .basketblock .basketblock__body {
+        padding: 20px 15px;
+    }
+
+    .shippingest__header {
+        padding: 5px 15px;
+    }
+
+    .cart__product-price .price {
+        margin: 0;
+    }
+
+    .basketblock .basketblock__header p,
+    .shippingest__header p {
+        font-size: 16px;
+    }
+
+    .basketblock__totalbox .greenbtn,
+    .cart__product-header p {
+        font-size: 14px;
+    }
 }
