--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -45,6 +45,10 @@ body {
         overflow-x: hidden;
         position: relative;
     }
+
+    &.offscroll {
+        overflow: hidden;
+    }
 }
 
 p {
@@ -257,9 +261,9 @@ input[type=number] {
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
 }
 
-
-
-
+.relative {
+    position: relative;
+}
 
 
 
