--- a/#source/scss/checkout.scss
+++ b/#source/scss/checkout.scss
@@ -161,7 +161,7 @@
             }
 
             &.title {
-                margin-bottom: 20px;
+                margin-bottom: 10px;
                 font-weight: 500;
                 font-size: 18px;
             }
@@ -473,6 +473,251 @@
     }
 }
 
+.addshipping-text {
+    width: 100%;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 5px;
+    border: none;
+    height: 40px;
+    pointer-events: none;
+
+    &::placeholder {
+        color: #21292F;
+    }
+
+    &.edit {
+        border: 1px solid #DBDCE2;
+        padding-left: 15px;
+        pointer-events: initial;
+
+        &::placeholder {
+            color: rgba(33, 41, 47, 0.6);
+        }
+    }
+}
+
+// EDIT
+.shipping-addressform {
+    .row {
+        margin-left: -10px;
+        margin-right: -10px;
+
+        .col-lg-6,
+        .col-md-6,
+        .col-lg-3,
+        .col-lg-12 {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    }
+
+    .inputfield {
+        input+input {
+            margin-top: 15px;
+        }
+
+        .generalselect {
+            order: 2;
+        }
+
+        .generalselect {
+            width: 100%;
+
+            .select2-container .select2-selection--single {
+                height: 55px;
+            }
+
+            .select2-container--default .select2-selection--single .select2-selection__rendered {
+                line-height: 55px;
+            }
+        }
+
+        .generalselect .select2-container .select2-selection--single {
+            border-width: 2px;
+        }
+    }
+
+    .generalselect .select2-container--default .select2-selection--single .select2-selection__arrow {
+        top: 15px;
+    }
+
+    .greenbtn {
+        min-height: 55px;
+        width: 240px;
+        margin: 15px auto 0;
+        font-size: 18px;
+    }
+}
+
+.checkwrapper {
+    margin-top: 5px;
+
+    input {
+        display: none;
+
+        &:checked {
+            &+label {
+                &::before {
+                    border-color: $base-green;
+                    background: url(../img/login/check.svg) no-repeat center/14px;
+                }
+            }
+        }
+    }
+
+    label {
+        position: relative;
+        padding-left: 30px;
+        line-height: 160%;
+        cursor: pointer;
+        margin: 0;
+
+        &::before {
+            content: '';
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            border-radius: 2px;
+            border: 1px solid #DBDCE2;
+            position: absolute;
+            left: 0;
+            top: 1px;
+        }
+    }
+}
+
+.formlmore {
+    color: $bace-color;
+    font-size: 13px;
+    line-height: 160%;
+    margin-bottom: 25px;
+
+    img {
+        vertical-align: middle;
+        margin-right: 6px;
+        margin-top: -3px;
+    }
+
+    a {
+        text-decoration: underline;
+        color: $base-green;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+.inputicon {
+    input {
+        padding-left: 65px;
+    }
+
+    &::after {
+        content: '';
+        display: inline-block;
+        background: url('../img/checkout/card-icon.svg') no-repeat center / 100%;
+        width: 25px;
+        height: 16px;
+        position: absolute;
+        left: 30px;
+        top: 55px;
+    }
+}
+
+.paymentform {
+
+    &.hide {
+        display: none;
+    }
+
+    .row {
+        margin-left: -10px;
+        margin-right: -10px;
+
+        .col-lg-6,
+        .col-lg-3,
+        .col-lg-12 {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    }
+
+    .choosecards {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: 35px;
+
+        .cardbox {
+            margin-right: 34px;
+
+            label {
+                width: 71px;
+                height: 44px;
+                border-radius: 5px;
+                box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.1);
+                background: $white;
+                border: 1px solid $white;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                transition: 0.3s;
+                cursor: pointer;
+
+                &:hover {
+                    border: 1px solid $base-green;
+                }
+            }
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            input {
+                display: none;
+
+                &:checked {
+                    &+label {
+                        border: 1px solid $base-green;
+                    }
+                }
+            }
+
+
+        }
+    }
+
+    .greenbtn {
+        min-height: 55px;
+        width: 240px;
+        margin: 15px auto 0;
+        font-size: 18px;
+    }
+
+
+
+
+
+
+
+
+
+
+}
+
+.paymethod.hide {
+    display: none;
+}
+
+
+
 @media(max-width:1399.8px) {
 
     .discontcode input:not([type=submit]) {
@@ -740,12 +985,193 @@
     }
 
 
+    .shipping-addressform .inputfield .generalselect .select2-container .select2-selection--single {
+        height: 46px;
+    }
+
+    .shipping-addressform .inputfield .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 46px;
+    }
+
+    .shipping-addressform .inputfield .generalselect .select2-container .select2-selection--single {
+        border-width: 1px;
+    }
+
+    .shipping-addressform .generalselect .select2-container--default .select2-selection--single .select2-selection__arrow {
+        top: 10px;
+    }
+
+    .paymentform .choosecards .cardbox {
+        margin-right: 10px;
+    }
+
+    .paymentform .choosecards .cardbox label {
+        width: 65px;
+        height: 40px;
+    }
+
+}
+
+@media(max-width:360.8px) {
+    .paymentform .choosecards {
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    .paymentform .choosecards .cardbox {
+        margin: 0;
+        max-width: calc(50% - 10px);
+        flex: 0 0 calc(50% - 10px);
+        margin-bottom: 10px;
+
+        label {
+            width: 100%;
+            height: 50px;
+        }
+    }
 }
 
 
 
+// THANK YOU page
+.checkouttywrap {
+    position: relative;
+
+    .cartbgelem3 {
+        position: absolute;
+        left: 0;
+        bottom: -150px;
+    }
+}
+
+.checkout-tysect {
+    margin: 80px 0 120px;
+    border-radius: 10px;
+    background: $white;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 95px 50px 125px;
+    text-align: center;
+    color: $bace-color;
+    position: relative;
+    z-index: 2;
+
+    img {
+        width: 70px;
+        margin-bottom: 22px;
+    }
+
+    .title {
+        margin-bottom: 25px;
+        color: $base-green;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 120%;
+    }
+
+    p {
+        margin-bottom: 35px;
+        font-size: 18px;
+        line-height: 160%;
+    }
+
+    .continf {
+        font-size: 20px;
+        line-height: 160%;
+        margin-bottom: 50px;
+
+        b {
+            font-weight: 500;
+        }
+    }
+
+    .greenbtn {
+        max-width: 400px;
+        margin: 0 auto;
+        min-height: 55px;
+        font-size: 18px;
+    }
+}
+
+@media(max-width:1550.8px) {
+
+    .checkout-tysect {
+        padding: 50px 50px 80px;
+    }
+
+    .checkout-tysect img {
+        width: 60px;
+    }
+
+    .checkout-tysect .title {
+        font-size: 26px;
+    }
+
+    .checkout-tysect p {
+        font-size: 16px;
+    }
+
+    .checkout-tysect .continf {
+        font-size: 18px;
+        margin-bottom: 40px;
+    }
+
+}
+
+@media(max-width:1199.8px) {
+
+    .checkout-tysect img {
+        margin-bottom: 15px;
+    }
+
+    .checkout-tysect .title {
+        font-size: 22px;
+    }
+
+    .checkout-tysect .title {
+        margin-bottom: 20px;
+    }
+
+    .checkout-tysect p {
+        margin-bottom: 30px;
+    }
+
+    .checkout-tysect .continf {
+        margin-bottom: 30px;
+    }
 
 
 
+}
+
+@media(max-width:575.8px) {
+    .checkout-tysect {
+        margin: 50px 0 80px;
+        padding: 30px 30px 60px;
+
+        img {
+            width: 50px;
+            margin-bottom: 10px;
+        }
+
+        .title {
+            font-size: 21px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            margin-bottom: 20px;
+        }
+
+        .continf {
+            font-size: 16px;
+        }
+
+        .greenbtn {
+            font-size: 16px;
+            min-height: 46px;
+        }
+
+    }
 
 
+}
