--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -57,6 +57,7 @@ p {
 
 input {
     outline: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -88,6 +89,7 @@ h6 {
     font-size: 13px;
     transition: 0.3s;
     border: none;
+    cursor: pointer;
 
     &:hover {
         background: #13b086;
@@ -454,6 +456,11 @@ input[type=number] {
     h1,
     h2 {
         font-size: 36px;
+    }
+
+    .greenbtn {
+        font-size: 16px !important;
+        min-height: 46px !important;
     }
 
 }
