--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -33,3 +33,180 @@
     filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.06));
     border-radius: 25px;
 }
+
+.popup__close {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgba(21, 132, 102, 0.1);
+    position: absolute;
+    right: 35px;
+    top: 48px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+
+    i {
+        line-height: 30px;
+        font-size: 18px;
+        transition: 0.3s;
+    }
+
+    &:hover {
+        background-color: rgba(21, 132, 102, 1);
+
+        i {
+            color: #fff;
+        }
+    }
+}
+
+.modaltitle {
+    margin-bottom: 35px;
+    color: $base-green;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 120%;
+}
+
+.modalform {
+    .inputfield {
+        input+input {
+            margin-top: 15px;
+        }
+
+        .generalselect {
+            order: 2;
+        }
+
+        .generalselect {
+            width: 375px;
+
+            .select2-container .select2-selection--single {
+                height: 55px;
+            }
+
+            .select2-container--default .select2-selection--single .select2-selection__rendered {
+                line-height: 55px;
+            }
+        }
+    }
+
+    .inputfield input:focus+input+label {
+        color: #158466;
+    }
+
+    .generalselect .select2-container--default .select2-selection--single .select2-selection__arrow {
+        top: 15px;
+    }
+
+    .checkwrapper {
+        margin-top: 5px;
+
+        input {
+            display: none;
+
+            &:checked {
+                &+label {
+                    &::before {
+                        border-color: $base-green;
+                        background: url(../img/login/check.svg) no-repeat center/14px;
+                    }
+                }
+            }
+        }
+
+        label {
+            position: relative;
+            padding-left: 30px;
+            line-height: 160%;
+            cursor: pointer;
+
+            &::before {
+                content: '';
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+                border-radius: 2px;
+                border: 1px solid #DBDCE2;
+                position: absolute;
+                left: 0;
+                top: 1px;
+            }
+        }
+    }
+}
+
+.modalbtngroup {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .greenbtn {
+        width: 225px;
+        min-height: 45px;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .bordergreenbtn {
+        margin-right: 20px;
+        width: 128px;
+        min-height: 45px;
+        font-size: 15px;
+    }
+}
+
+
+@media(max-width:1199.8px) {
+    .modalform .inputfield .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 50px;
+    }
+
+    .modalform .inputfield .generalselect .select2-container .select2-selection--single {
+        height: 50px;
+    }
+
+
+}
+
+@media(max-width:767.8px) {
+
+    .modaltitle {
+        font-size: 22px;
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .popup__wrapper {
+        padding: 20px 0;
+    }
+
+    .popup__body {
+        border-radius: 15px;
+        padding: 45px 20px 40px;
+    }
+
+    .popup__close {
+        top: 10px;
+        right: 10px;
+    }
+
+    .modaltitle {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .modalform .inputfield .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 46px;
+    }
+
+    .modalform .inputfield .generalselect .select2-container .select2-selection--single {
+        height: 46px;
+    }
+
+
+    
+
+}
