--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,4 +1,5 @@
 @import "global";
+@import "tooltip";
 @import "header";
 @import "footer";
 @import "main";
@@ -12,4 +13,5 @@
 @import "checkout";
 @import "popups";
 @import "recipes-center";
+@import "selected-recipe";
 
