--- a/#source/scss/recipes-center.scss
+++ b/#source/scss/recipes-center.scss
@@ -443,7 +443,7 @@
         max-width: 100%;
         flex: 0 0 100%;
         margin-bottom: 10px;
-    }   
+    }
 
     .recipessearch .recipessearch__searchbox {
         max-width: 100%;
@@ -451,7 +451,7 @@
         padding-left: 0;
     }
 
-   
+
 
 
 
@@ -462,7 +462,8 @@
         flex-wrap: wrap;
     }
 
-    .recipessearch .bordergreenbtn, .recipessearch .searchblock {
+    .recipessearch .bordergreenbtn,
+    .recipessearch .searchblock {
         max-width: 100%;
         flex: 0 0 100%;
     }
@@ -503,5 +504,162 @@
     .recipesslider.recipesslider__video .productsection__header .descr {
         font-size: 14px;
     }
+
+}
+
+
+// Recipe selected category
+
+.recipecategoryname {
+    padding: 20px 0 15px 0;
+}
+
+.reccatnamewrap {
+    height: 230px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
+    display: flex;
+
+    &>img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    .reccatnamewrap__title {
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        max-width: 59%;
+        flex: 0 0 59%;
+        display: flex;
+        align-items: center;
+        padding-left: 120px;
+
+        p {
+            color: $white;
+            margin: 0;
+            font-family: 'Poetsenone';
+            font-size: 50px;
+            line-height: 110%;
+            letter-spacing: 1.879px;
+            text-transform: uppercase;
+        }
+    }
+
+    .reccatnamewrap__img {
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        max-width: 41%;
+        flex: 0 0 41%;
+        height: 100%;
+
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 0 0;
+        }
+    }
+}
+
+.productsection__header p {
+    span {
+        color: $base-green;
+    }
+}
+
+.recipesslider  {
+    .productsection__header p {
+        font-size: 30px;
+    }
+}
+
+@media(max-width: 1550.8px) {
+    .reccatnamewrap .reccatnamewrap__title {
+        padding-left: 100px;
+    }
+
+    .allrecipes .productsection__header {
+        margin-bottom: 40px;
+    }
+}
+
+@media(max-width:1199.8px) {
+    .recipesslider .productsection__header p {
+        font-size: 25px;
+    }
+
+    .reccatnamewrap .reccatnamewrap__title {
+        padding-left: 40px;
+    }
+
+}
+
+@media(max-width:991.8px) {
+    .reccatnamewrap {
+        height: 160px;
+
+        .reccatnamewrap__title p {
+            font-size: 32px;
+        }
+    }
+
+
+
+
+}
+
+@media(max-width:767.8px) {
+    .reccatnamewrap .reccatnamewrap__title p {
+        font-size: 28px;
+    }
+
+}
+
+@media(max-width:575.8px)  {
+    .reccatnamewrap {
+        height: 120px;
+    }
+
+    .reccatnamewrap .reccatnamewrap__title p {
+        font-size: 24px;
+    }
+
+    .reccatnamewrap .reccatnamewrap__title {
+        padding-left: 20px;
+    }
+
+    .recipecategoryname {
+        padding-bottom: 0;
+    }
+
+    .recipesslider .productsection__header p {
+        font-size: 18px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .allrecipes .productsection__header {
+        margin-bottom: 20px;
+    }
+
+    .recipecategoryname {
+        padding-top: 15px;
+    }
+
+
+
+
+
 
 }
